messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
spec:
  rules:
    http:
      paths:
        - pathType: Prefix
          path: /api
          backend:
            service:
              name: messaging-app-service
              port:
                number: 8000

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/nginx
