messaging_app/messaging_app/kubeservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-blue-green-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-weight: "20"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: messaging-app-blue
                port:
                  number: 80
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: messaging-app-green
                port:
                  number: 80
